# cli-audio-player

./: .gitignore  Cargo.toml  README.md  cli-audio-player
src/: audio.rs  main.rs
